# gorgonites

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.ini
assets/: CREDITS.md
src/: lib.rs  main.rs
src/ai/: client.rs  mod.rs  ollama.rs  prompts.rs
src/assets/: mod.rs
src/audio/: melody.rs  mod.rs  music.rs  synth.rs
src/config/: mod.rs
src/ecs/: component.rs  entity.rs  mod.rs  system.rs
src/frontend/: camera.rs  capture.rs  hud.rs  input.rs  mod.rs  scene.rs  sim.rs  sync.rs
src/game/: ai_nation.rs  entities.rs  era.rs  interface.rs  mapgen.rs  mod.rs  render_world.rs  state.rs  world.rs
src/rendering/: camera.rs  map.rs  mod.rs  sprites.rs
src/sprites/: fog.rs  generator.rs  mod.rs  renderer.rs
src/systems/: mod.rs
src/systems/narrative/: choices.rs  events.rs  mod.rs  narrator.rs
src/systems/rts/: combat.rs  mod.rs  resources.rs  units.rs
src/systems/strategy/: diplomacy.rs  factions.rs  mod.rs  territory.rs
src/systems/timeline/: divergence.rs  mod.rs  tech_tree.rs
src/ui/: dialogue.rs  hud.rs  menu.rs  mod.rs  widgets.rs
tests/: simulation.rs
