[package]
name = "gorgonites"
version = "0.1.0"
edition = "2021"
authors = ["Gumbees"]
description = "An AI-driven alternate history strategy game"
repository = "https://github.com/Gumbees/gorgonites"
license = "MIT"
keywords = ["game", "strategy", "rts", "ai", "narrative"]
categories = ["games"]

[dependencies]
# Game Framework
macroquad = "0.4"

# Async runtime for AI calls
tokio = { version = "1", features = ["full"] }

# Serialization (save games, config, AI prompts)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Configuration file parsing
rust-ini = "0.21"

# HTTP client for AI API calls
reqwest = { version = "0.12", features = ["json"] }

# Random generation (maps, events, combat rolls)
rand = "0.8"

# Audio synthesis and playback
rodio = { version = "0.19", default-features = false, features = ["wav"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
thiserror = "1"
anyhow = "1"

# UUID for entity IDs
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
