[package]
name = "gorgonites"
version = "0.1.0"
edition = "2021"
authors = ["Gumbees"]
description = "An AI-driven alternate history strategy game"
repository = "https://github.com/Gumbees/gorgonites"
license = "MIT"
keywords = ["game", "strategy", "rts", "ai", "narrative"]
categories = ["games"]

[dependencies]
# Game Framework — Bevy 3D (PBR renderer, ECS, UI).
# Explicit feature set: audio (ALSA) and gamepad (udev) are off so the
# project builds on headless CI; re-enable "bevy_audio"/"bevy_gilrs" when
# sound/controller support lands.
bevy = { version = "0.16", default-features = false, features = [
    "std",
    "async_executor",
    "multi_threaded",
    # Umbrella "animation" feature — NOT bare "bevy_animation". The latter only
    # compiles the animation crate; "animation" also turns on
    # bevy_gltf?/bevy_animation, which is what parses the KayKit clips out of the
    # glb and attaches the AnimationPlayer. Without it: zero AnimationN labels.
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gltf", # load KayKit CC0 character models (.glb)
    "bevy_gizmos",
    "bevy_log",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "png",
    "jpeg", # ambientCG PBR texture maps
    "hdr",  # Poly Haven equirectangular sky HDRI
    "x11",
] }

# Async runtime for AI calls
tokio = { version = "1", features = ["full"] }

# Serialization (save games, config, AI prompts)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client for AI API calls
reqwest = { version = "0.12", features = ["json"] }

# Random generation (maps, events, combat rolls)
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# UUID for entity IDs
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
